crates/type_checker/src/tests/snapshots/array_index_bad_1.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 723
expression: "(test[1], res)"
---
- "\nlet x: [int; 3] = [1, 2, 3]\nlet y: float = 1.0\nx[y]\n"
- Err: "Array index must be an `int`, found `float`"

