crates/type_checker/src/tests/snapshots/array_index_bad_2.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 719
expression: "(test[1], res)"
---
- "\nlet x: [int] = [1, 2, 3]\nx['c']\n"
- Err: "Array index must be an `int`, found `char`"

