crates/type_checker/src/tests/snapshots/array_index_bad_3.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 722
expression: "(test[1], res)"
---
- "\nlet x: int;\nx[y]\n"
- Err: "Can't index `int32`"

