crates/type_checker/src/tests/snapshots/array_index_bad_4.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 722
expression: "(test[1], res)"
---
- "\nlet x: [int] = [1, 2, 3]\nlet y: int8 = 1\nx[y]\n"
- Err: Index must be an int32 (for now)

