crates/type_checker/src/tests/snapshots/array_lit.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 723
expression: "(test[1], res)"
---
- "let x: [int; 3] = [1, 2, 3]"
- Ok:
    nodes:
      - Stmt:
          Let:
            name: x
            antn:
              Array:
                - Int32
                - 3
            init:
              Expr:
                Lit:
                  value:
                    Array:
                      elements:
                        - Expr:
                            Lit:
                              value:
                                Int32: 1
                              ty: Int32
                        - Expr:
                            Lit:
                              value:
                                Int32: 2
                              ty: Int32
                        - Expr:
                            Lit:
                              value:
                                Int32: 3
                              ty: Int32
                      inner_ty: Int32
                  ty:
                    Array:
                      - Int32
                      - 3

