crates/type_checker/src/tests/snapshots/array_lit_bad_3.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 723
expression: "(test[1], res)"
---
- "let x: [int; 2] = [1, 2, 3]"
- Err: "Array literal too big in assignment: `3` > `2`"

