crates/type_checker/src/tests/snapshots/binop_bad_lhs_assign.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 156
expression: "(test[1], res)"
---
- "\nfn main(x: int) {\n    x + 1 = 1\n}\n"
- Err: Expected LHS to be a variable for assignment

