crates/type_checker/src/tests/snapshots/binop_bad_lit_float.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 156
expression: "(test[1], res)"
---
- "\nfn main(x: int) {\n    1.0 || true\n}\n"
- Err: Literal is a float in a bool context

